@@ -7,7 +7,7 @@ public class ProxyConfigurator {
     public static boolean configureProxy() {
         try {
             // Check if the torrc file for the proxy exists, create it if not
-            File torrcFile = new File("torrc/proxy");
+            File torrcFile = new File("torrc/proxy/torrc-proxy");
             if (!torrcFile.exists()) {
                 torrcFile.createNewFile();
             }
@@ -16,13 +16,13 @@ public class ProxyConfigurator {
             FileWriter fw = new FileWriter(torrcFile);
             BufferedWriter bw = new BufferedWriter(fw);
 
-            bw.write("SocksPort 192.168.1.100:9050");
+            bw.write("SocksPort 192.168.2.119:9050");
             bw.newLine();
             bw.write("SocksPolicy accept 192.168.1.0/24");
             bw.newLine();
             bw.write("RunAsDaemon 1");
             bw.newLine();
-            bw.write("DataDirectory /var/lib/tor");
+            bw.write("DNSPort 192.168.2.119:53");
 
             bw.close();
 
@@ -35,15 +35,24 @@ public class ProxyConfigurator {
 
     public static boolean startProxy() {
         try {
-            // Execute a command to start the Tor Proxy service
-            Process process = Runtime.getRuntime().exec("sudo systemctl start tor@default");
+            // Start the Tor Proxy
+            ProcessBuilder processBuilder = new ProcessBuilder("/bin/bash", "-c", "sudo tor -f /home/matys/IdeaProjects/torConfigTool/torrc/proxy/torrc-proxy");
+            // print command for debugging
+            System.out.println(processBuilder.command());
+            Process process = processBuilder.start();
 
-            // Wait for the process to complete
-            int exitCode = process.waitFor();
 
-            // Check the exit code to determine if the start was successful
-            return exitCode == 0;
-        } catch (Exception e) {
+            try {
+                int exitCode = process.waitFor();
+
+                // Log the exit code
+                System.out.println("Command exit code: " + exitCode);
+
+                return exitCode == 0;
+            } finally {
+                process.destroy();
+            }
+        } catch (IOException | InterruptedException e) {
             e.printStackTrace();
             return false;
         }
